some corrections on scroll row positions for Brave compatibilty on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -207,7 +207,12 @@ p {
     z-index: 10;
   }
 
-  /* Force l'affichage du dernier bloc sur mobile */
+  /* Force l'affichage du dernier bloc sur mobile - Brave friendly */
+
+  .row {
+    margin-bottom: 40px !important;
+  }
+
   .row:last-child {
     padding-bottom: 100px;
     min-height: 100vh !important;
